--- a/001. HTML학습/01. Info_pj/문서의구조화.html
+++ b/001. HTML학습/01. Info_pj/문서의구조화.html
@@ -1,5 +1,8 @@
+
+<!--필기모음 002-1 / 002-2 html기초 및 태그 내용-->
 <!DOCTYPE html>
 <htm1>
+    
     <head>
         <meta charset="UTF-8">
         <title>프론트엔드 개발자 양성과정</title>
