--- a/001. HTML학습/02. Info_PJ/index.html
+++ b/001. HTML학습/02. Info_PJ/index.html
@@ -63,14 +63,14 @@
             */
             margin: 20px auto;
 
-            
+
 
 
         }
 
 
         /* 메인 이미지 크기 변경하기 
-        main img << main 밑에 img <<띄어쓰기 혹은 > 로 자식구분함 가져옴 */
+        main img << main 밑에 img <<띄어쓰기 혹은 > 로 자식구분함 */
         main > img{
             /* main#main-area img로 써도 됨.
             main #main-area img << 요렇게 되면 main 자식 중에 main-area를 가져오라는 뜻임 */
