--- a/001. HTML학습/02. Info_PJ/index.html
+++ b/001. HTML학습/02. Info_PJ/index.html
@@ -10,6 +10,12 @@
 
     <!-- CSS 인터널방식 코드 -->
     <style>
+        /* 웹폰트 구글 CDN */
+        @import url(https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet);
+
+
+
+
         /* CSS코딩 구역 
             CSS 설정 코딩 방식
 
@@ -63,9 +69,6 @@
             */
             margin: 20px auto;
 
-
-
-
         }
 
 
@@ -77,6 +80,51 @@
             width: 100%;
 
         }
+
+        /* 콤마는 그룹 선택자(다중선택 가능) */
+        header.part,footer.part{
+            /* color: red; */
+            text-align: center;
+        }
+
+        #top-area{
+            background-color: #c7ffd4;
+            font-family: "Noto Sans KR", sans-serif;
+        }
+
+        #info-area{            
+            background-color: #e1e1e1;
+            font-family: "Noto Sans KR", sans-serif;
+            font-style: normal;
+        }
+
+        .menu{
+            font-family: "Black Han Sans", sans-serif;
+        }
+
+        /* 메뉴링크 */
+        .menu a{
+            color: #327a50;
+            text-decoration: none;
+            font-size: 24px;
+        }
+
+        /* 메뉴링크 오버시
+        앞에 a가 있는 것만 바꿀 것 >>a+<<a..~ */
+        .menu a+a:hover{
+            text-decoration: underline;
+            text-decoration-style: wavy;
+            color: #ca8712;
+        }
+
+        /* [선택자들]
+            1. 타입선택자 : 태그명
+            2. 아이디/클래스 선택자 : 요소이름
+            3. 종속선택자 : 요소명 + 이름(h1#my)
+            4. 자손선택자 : 띄어쓰기
+            5. 직계자손선택자 : >
+            6. 그룹선택자 : ,
+        */
     </style>
   </head>
 
@@ -96,10 +144,10 @@
           />
           <!-- stlye속성으로 개별요소에 CSS를 설정할 수 있다 << 인라인 방식 -->
         </a>
-        <a href="">정치</a>
-        <a href="">경제</a>
-        <a href="">사회</a>
-        <a href="">IT/과학</a>
+        <a href="">정치</a> |
+        <a href="">경제</a> |
+        <a href="">사회</a> |
+        <a href="">IT/과학</a> |
         <a href="">TV/연예</a>
       </div>
     </header>
