--- a/001. HTML학습/02. Info_PJ/index.html
+++ b/001. HTML학습/02. Info_PJ/index.html
@@ -45,7 +45,7 @@
             width: 750px;
             /* height: 300px; */
             /* height: auto; */
-            border: 1px solid #000;
+            border: 4px double #14a72c;
             border-radius: 20px;
 
             /* 패딩
