--- a/001. HTML학습/02. Info_PJ/index.html
+++ b/001. HTML학습/02. Info_PJ/index.html
@@ -11,7 +11,7 @@
     <!-- CSS 인터널방식 코드 -->
     <style>
         /* 웹폰트 구글 CDN */
-        @import url("https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Noto+Sans+KR:wght@100..900&display=swap");
+        @import url('https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Noto+Sans+KR:wght@100..900&display=swap');
 
 
 
