3일차 서브페이지

--- a/001. HTML학습/02. Info_PJ/sub4.html
+++ b/001. HTML학습/02. Info_PJ/sub4.html
@@ -56,12 +56,15 @@
         <!-- 이미지 -->
         <img src="./images/article_picture4.jpg" alt="IT/과학기사 이미지" />
         <!-- 이미지 설명 -->
-        <figcaption>
-          나노플라스틱에 노출된 어미세대의 완두로부터 수확된 완두콩과 이를
-          재식재한 후세대 식물에서 나노플라스틱의 녹색 형광이 확인됐다. 이는
-          토양환경 내에서 식물의 뿌리, 줄기 뿐 아니라 열매로까지 나노플라스틱이
-          전이되어 후세대 식물에도 전이될 수 있음을 나타낸다.
-          [사진=한국연구재단]
+        <figcaptio class="article-exp">
+          
+          <p>
+            나노플라스틱에 노출된 어미세대의 완두로부터 수확된 완두콩과 이를
+            재식재한 후세대 식물에서 나노플라스틱의 녹색 형광이 확인됐다. 이는
+            토양환경 내에서 식물의 뿌리, 줄기 뿐 아니라 열매로까지 나노플라스틱이
+            전이되어 후세대 식물에도 전이될 수 있음을 나타낸다.
+            [사진=한국연구재단]
+          </p>
         </figcaption>
       </figure>
       <!-- figure 요소
@@ -69,7 +72,10 @@
           - 이미지 설명은 하위요소인 figcation을 사용함. (설명이 필요없으면 생략함) 
         -->
 
-      <!-- 기사 내용 -->
+        <br>
+        <br>
+      
+        <!-- 기사 내용 -->
       <section class="contents">
         <p>
           안 교수 연구팀이 완두를 대상으로 미세·나노플라스틱의 이동을 관찰한
