3일차 백그라운드이미지
- 각 메뉴마다 다르게 이미지를 넣음.
- 백그라운드 이미지에 대한 간단 설명

--- a/001. HTML학습/02. Info_PJ/sub4.html
+++ b/001. HTML학습/02. Info_PJ/sub4.html
@@ -39,7 +39,7 @@
     <!-- 2. 메인영역 - 컨텐츠 -->
     <main id="main-area" class="part">
       <!-- 2-1. 서브타이틀 -->
-      <h2 class="sub-title">IT/과학 뉴스</h2>
+      <h2 class="sub-title IT">IT/과학 뉴스</h2>
 
       <!-- 언론사 로고 -->
       <div class="press-logo">
