--- a/001. HTML학습/02. Info_PJ/sub3.html
+++ b/001. HTML학습/02. Info_PJ/sub3.html
@@ -43,7 +43,7 @@
     <!-- 2. 메인영역 - 컨텐츠 -->
     <main id="main-area" class="part">
         <!-- 2-1. 서브타이틀 -->
-        <h2 class="sub-title">사회 뉴스</h2>
+        <h2 class="sub-title society">사회 뉴스</h2>
 
       <!-- 언론사 로고 -->
       <div class="press-logo">
