HTML서식 관련 요소

--- a/001. HTML학습/02. Info_PJ/sub3.html
+++ b/001. HTML학습/02. Info_PJ/sub3.html
@@ -90,7 +90,7 @@
 
       <!-- 기사 원문 -->
       <h5 class="article-link">
-        <a href=""target="_blank">기사원문</a>
+        <a href="https://n.news.naver.com/mnews/article/421/0007349847"target="_blank">기사원문</a>
       </h5>
 
 
