--- a/001. HTML학습/02. Info_PJ/sub5.html
+++ b/001. HTML학습/02. Info_PJ/sub5.html
@@ -90,7 +90,7 @@
 
       <!-- 기사 원문 -->
       <h5 class="article-link">
-        <a href=""target="_blank">기사원문</a>
+        <a href="https://entertain.naver.com/read?oid=241&aid=0003329704&cid=1073787"target="_blank">기사원문</a>
       </h5>
 
 
