--- a/001. HTML학습/02. Info_PJ/sub4.html
+++ b/001. HTML학습/02. Info_PJ/sub4.html
@@ -59,11 +59,13 @@
         <figcaptio class="article-exp">
           
           <p>
-            나노플라스틱에 노출된 어미세대의 완두로부터 수확된 완두콩과 이를
-            재식재한 후세대 식물에서 나노플라스틱의 녹색 형광이 확인됐다. 이는
-            토양환경 내에서 식물의 뿌리, 줄기 뿐 아니라 열매로까지 나노플라스틱이
-            전이되어 후세대 식물에도 전이될 수 있음을 나타낸다.
-            [사진=한국연구재단]
+            <small>
+              나노플라스틱에 노출된 어미세대의 완두로부터 수확된 완두콩과 이를
+              재식재한 후세대 식물에서 나노플라스틱의 녹색 형광이 확인됐다. 이는
+              토양환경 내에서 식물의 뿌리, 줄기 뿐 아니라 열매로까지 나노플라스틱이
+              전이되어 후세대 식물에도 전이될 수 있음을 나타낸다.
+              [사진=한국연구재단]
+            </small>
           </p>
         </figcaption>
       </figure>
@@ -78,27 +80,29 @@
         <!-- 기사 내용 -->
       <section class="contents">
         <p>
-          안 교수 연구팀이 완두를 대상으로 미세·나노플라스틱의 이동을 관찰한
-          결과, 미세·나노플라스틱에 노출된 식물에서 생산된 열매와 그 열매에서
-          성장한 후세대 식물에서도 미세플라스틱이 확인됐다.
+          <i>안 교수 연구팀</i>이 <b>완두</b>를 대상으로 <b>미세·나노플라스틱</b>의 이동을 관찰한
+          결과, <b>미세·나노플라스틱</b>에 노출된 식물에서 생산된 열매와 그 열매에서
+          <strong>성장한 후세대 식물에서도 미세플라스틱이 확인</strong>됐다.
         </p>
 
         <p>
-          안 교수팀은 선행 연구를 통해 식물이 토양환경에서 미세·나노플라스틱을
-          흡수하는 메커니즘을 규명한 바 있다. 또한 식물이 흡수한
+          <i>안 교수팀</i>은 선행 연구를 통해 식물이 토양환경에서<em>
+             미세·나노플라스틱을
+            흡수하는 메커니즘을 규명
+          </em>한 바 있다. 또한 식물이 흡수한
           미세·나노플라스틱이 줄기와 잎 등 식물의 상부조직까지 도달하는 것을
           확인했다. 이번 연구에서는 미세·나노플라스틱에 노출된 식물의 열매를
-          비롯해 해당 식물의 후세대로 나노플라스틱 전이된 것을 밝힌 것이다.
+          비롯해 해당 식물의 <mark>후세대로 나노플라스틱 전이된 것을 밝힌 것</mark>이다.
         </p>
 
         <p>
-          연구팀은 중요 식량자원이자 독성연구 표준시험종인 완두(Pisum sativum)를
+          <i>연구팀</i>은 중요 식량자원이자 독성연구 표준시험종인 완두(Pisum sativum)를
           대상 시험종으로 선정하고, 미세·나노플라스틱에 노출시켜 열매인 완두콩과
           다음 세대 로의 전이를 확인했다.
         </p>
 
         <p>
-          연구팀은 200 nm 크기의 형광 폴리스티렌 미세·나노플라스틱으로 오염된
+          <i>연구팀</i>은 200 nm 크기의 형광 폴리스티렌 미세·나노플라스틱으로 오염된
           토양에 완두를 약 60일간 노출시킨 후 완두콩을 수확했다. 수확한 완두콩을
           공초점 레이저 주사현미경으로 관찰한 결과, 완두콩의 배아와 떡잎에서
           미세·나노플라스틱이 확인됐다. 또한 수확한 완두콩을 미세·나노플라스틱에
@@ -169,5 +173,27 @@
         전화 : 010-4777-5555
       </address>
     </footer>
+
+    <!-- 
+      [ 1. HTML서식 관련 요소들]
+      1. 두꺼운 글자
+      <b>- 굵은 텍스트 (Bold text - 단순 글자만 두꺼움)
+      <strong>- 중요한 텍스트 (Important text - 중요 글자)
+
+      2. 이텔릭글자  
+      <i>- 기울임꼴 텍스트 (Italic text - 글자만 이탤릭처리)
+      <em>- 강조된 텍스트 (Empahsized text - 강조의 의미)
+
+      3. 색상표시
+      <mark>- 표시된 텍스트 (Marked text - 눈에 띄게 표시)
+
+      4. 작은 글자
+      <small>- 더 작은 텍스트 (Smaller text)
+        
+      <del>- 삭제된 텍스트
+      <ins>- 삽입된 텍스트
+      <sub>- 아래 첨자 텍스트
+      <sup>- 위 첨자 텍스트
+     -->
   </body>
 </html>
