이미지 가운데 정렬

--- a/001. HTML학습/02. Info_PJ/sub1.html
+++ b/001. HTML학습/02. Info_PJ/sub1.html
@@ -62,7 +62,7 @@
         <img src="./images/poli_img.jpg" alt="정치 기사 이미지">
         
         <!-- 이미지 설명 -->
-        <figcaptio class="article-exp">
+        <figcaption>
           <p>
             <small>
               이중근 부영그룹 회장이 5일 서울시 중구에 위치한 부영태평빌딩에서 2021년 이후 출산한 임직원에게 출산 장려금을 전달하고 있다.(부영그룹 제공)
