--- a/001. HTML학습/02. Info_PJ/sub2.html
+++ b/001. HTML학습/02. Info_PJ/sub2.html
@@ -61,7 +61,7 @@
         <img src="./images/eco_img.jpg" alt="경제기사 이미지">
         
         <!-- 이미지 설명 -->
-        <figcaptio class="article-exp">
+        <figcaption>
           <p>
             <small>
               올해 근로자녀장려금을 받는 가정이 80만 가구 늘어나고 지급 규모도 5조 2000억원에서 6조 1000억원으로 확대된다. 이미지투데이    
