--- a/001. HTML학습/02. Info_PJ/sub3.html
+++ b/001. HTML학습/02. Info_PJ/sub3.html
@@ -61,7 +61,7 @@
         <img src="./images/soc_img.jpg" alt="사회기사 사진">
         
         <!-- 이미지 설명 -->
-        <figcaptio class="article-exp">
+        <figcaption">
           <p>
             <small>
               한파가 물러가고 따뜻한 봄 날씨가 이어지자 경북 경산시 압량읍 복숭아 하우스에서 한파를 이겨낸 북숭아 나무에 연분홍 꽃망울이 활짝 펴 봄의 시작을 알리고 있다 (경산시 제공) 2024.2.14/뉴스1 ⓒ News1 정우용 기자
