--- a/001. HTML학습/02. Info_PJ/sub4.html
+++ b/001. HTML학습/02. Info_PJ/sub4.html
@@ -56,7 +56,7 @@
         <!-- 이미지 -->
         <img src="./images/article_picture4.jpg" alt="IT/과학기사 이미지" />
         <!-- 이미지 설명 -->
-        <figcaptio class="article-exp">
+        <figcaption>
           <p>
             <small>
               나노플라스틱에 노출된 어미세대의 완두로부터 수확된 완두콩과 이를
@@ -129,8 +129,10 @@
         <p>
           이 연구는 과학기술정보통신부와 교육부, 한국연구재단이 추진하는
           중견연구사업 및 이공분야학문후속세대양성사업으로 수행됐으며,
-          환경과학분야 국제학술지 저널 오브 해저드스 머티리얼스(Journal of
-          Hazardous Materials)에 1월 14일 온라인 게재됐다. (논문명 Evidence of
+          환경과학분야 국제학술지 저널 오브 해저드스 머티리얼스<sub>
+            (Journal of
+            Hazardous Materials)
+          </sub>에 1월 14일 온라인 게재됐다. (논문명 Evidence of
           parental transfer of nanoplastics in pea (Pisum sativum) plants)
         </p>
       </section>
