--- a/001. HTML학습/02. Info_PJ/sub5.html
+++ b/001. HTML학습/02. Info_PJ/sub5.html
@@ -61,7 +61,7 @@
         <img src="./images/TV_img.jpg" alt="TV/연예기사 사진">
         
         <!-- 이미지 설명 -->
-        <figcaptio class="article-exp">
+        <figcaption>
           <p>
             <small>
               가수 이효리가 14일 오전 서울 성북구 국민대학교 콘서트홀에서 열린 '2023학년도 전기 학위수여식'에 참석해 축사를 하고 있다. 서병수 기자 qudtn@edaily.co.kr /2024.02.14/
