--- a/001. HTML학습/02. Info_PJ/sub4.html
+++ b/001. HTML학습/02. Info_PJ/sub4.html
@@ -80,15 +80,13 @@
       <section class="contents">
         <p>
           <i>안 교수 연구팀</i>이 <b>완두</b>를 대상으로 <b>미세·나노플라스틱</b>의 이동을 관찰한
-          결과, <b>미세·나노플라스틱</b>에 노출된 식물에서 생산된 열매와 그 열매에서
+          결과, <b>미세·나노플라스틱</b><sup>①</sup>에 노출된 식물에서 생산된 열매와 그 열매에서
           <strong>성장한 후세대 식물에서도 미세플라스틱이 확인</strong>됐다.
         </p>
 
         <p>
           <i>안 교수팀</i>은 선행 연구를 통해 식물이 토양환경에서<em>
-             미세·나노플라스틱을
-            흡수하는 메커니즘을 규명
-          </em>한 바 있다. 또한 식물이 흡수한
+             미세·나노플라스틱을 흡수하는 메커니즘을 규명</em>한 바 있다. 또한 식물이 흡수한
           미세·나노플라스틱이 줄기와 잎 등 식물의 상부조직까지 도달하는 것을
           확인했다. 이번 연구에서는 미세·나노플라스틱에 노출된 식물의 열매를
           비롯해 해당 식물의 <mark>후세대로 나노플라스틱 전이된 것을 밝힌 것</mark>이다.
@@ -102,7 +100,8 @@
 
         <p>
           <i>연구팀</i>은 200 nm 크기의 형광 폴리스티렌 미세·나노플라스틱으로 오염된
-          토양에 완두를 약 60일간 노출시킨 후 완두콩을 <ins>대대적으로</ins> 수확했다. 수확한 완두콩을
+          토양에 완두를 약 60일간 노출시킨 후 완두콩을 <ins>대대적으로</ins> 수확했다. 
+          수확한 완두콩을
           공초점 레이저 주사현미경으로 관찰한 결과, 완두콩의 배아와 떡잎에서
           미세·나노플라스틱이 확인됐다. 또한 수확한 완두콩을 미세·나노플라스틱에
           오염되지 않은 토양에 재식재하여 14일간 배양한 뒤 관찰한 결과, <ins>
@@ -132,8 +131,7 @@
           환경과학분야 국제학술지 저널 오브 해저드스 머티리얼스<sub>
             (Journal of
             Hazardous Materials)
-          </sub>에 1월 14일 온라인 게재됐다. (논문명 Evidence of
-          parental transfer of nanoplastics in pea (Pisum sativum) plants)
+          </sub>에 1월 14일 온라인에 논문<sup>②</sup>이 게재됐다.
         </p>
       </section>
       <!-- [p요소] : 문단(Paragraph)
@@ -151,11 +149,19 @@
         <a href="https://n.news.naver.com/mnews/article/031/0000812167"target="_blank">기사원문</a>
       </h5>
 
-
-
-
-
-
+      <!-- hr 요소 : horizontal line - 수평선
+          - 보통 CSS디자인요소로 사용하지는 않음! -->
+      <hr>
+      
+      <!-- 주해 영역 -->
+      <article class="desc">
+        <h5>주해</h5>
+        <div>
+          ① 미세나노플라스틱은 1㎛(마이크로미터·100만 분의 1m)∼5㎜ 크기의 플라스틱. 애초에 작은 크기로 생산되기도 하지만 페트병이나 비닐봉지 등이 시간이 지나며 잘게 부서져 생성되기도 한다.
+          <br><br>
+          ② 논문명은 Evidence of parental transfer of nanoplastics in pea (Pisum sativum) plants
+        </div>
+      </article>
 
 
 
