--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>유지영의 아카이브 사이트</title>
 <style>
+    html,body{
+        margin: 0;
+        padding: 0;
+        height: 100%;
+    }
+    body{
+        background-image: 
+        linear-gradient(to bottom,rgb(98, 200, 244),rgb(217, 239, 242));
+
+        /* [ 선형 그라데이션 ] 
+        linear-gradient(방향, 색1,색2,색3,...);
+        - 방향 to top,to left... */
+    }
     .wrap{
         border: 2px dashed darkblue;
         border-radius: 20px;
