--- a/001. HTML학습/02. Info_PJ/sub1.html
+++ b/001. HTML학습/02. Info_PJ/sub1.html
@@ -81,9 +81,9 @@
         <!-- 기사 내용 -->
       <section class="contents">
 
-        <p>(서울=뉴스1) 황보준엽 기자 = 정부가 기업이 직원들에게 주는 출산·육아 지원금에 적용되는 세금 문제의 손질에 나선다. 부영그룹이 내놓은 출생아 한명당 1억원이라는 '통큰' 출산장려정책의 효과를 극대화하기 위한 조치로, 이 같은 복지가 확산할 수 있을지 관심이 모인다.</p>
+        <p>(서울=뉴스1) 황보준엽 기자 = 정부가 기업이 직원들에게 주는 출산·육아 지원금에 적용되는 세금 문제의 손질에 나선다. 부영그룹이 내놓은 출생아 한명당 1억원이라는 '통큰' <b>출산장려정책의 효과를 극대화</b>하기 위한 조치로, 이 같은 복지가 확산할 수 있을지 관심이 모인다.</p>
 
-        <p>윤 대통령은 13일 최근 대규모 출산지원금 지급 등 저출산 극복을 위한 기업 차원의 노력이 확산하고 있는 것과 관련해 "상당히 고무적"이라며 "기업의 자발적인 출산 지원 활성화를 위해 세제 혜택 등 다양한 지원 방안을 즉각 강구하라"고 주문했다.</p>
+        <p>윤 대통령은 13일 최근 대규모 출산지원금 지급 등 저출산 극복을 위한 기업 차원의 노력이 확산하고 있는 것과 관련해 "<b>상당히 고무적</b>"이라며 <q> 기업의 자발적인 출산 지원 활성화를 위해 세제 혜택 등 다양한 지원 방안을 즉각 강구하라 </q>고 주문했다.</p>
 
         <p>이 같은 세제 변화를 끌어낸 건 부영그룹이다. 출산장려를 위해 지난 2021년 이후 출산한 직원 자녀들에게 출생아 1명당 1억원씩 지원하기로 했다. 일부 대기업에선 1000만원 대의 장려금 지급을 하기도 하지만, 1억원이라는 거액을 지급하는 사례는 처음이다.</p>
 
@@ -91,11 +91,11 @@
 
         <p>이 때문에 부영그룹은 직원의 세금 부담을 덜어준다는 차원에서 직원의 임금 대신 증여 방식을 택한 것으로 알려졌다. 보수가 아닌 상여금 등 다른 형태로 지급하더라도 모두 근로기준법상 임금에 해당한다. 주는 쪽인 회사 역시 법인세 세액이 부과된다.</p>
 
-        <p>이번 대통령 지시에 따라 관련 부처에서는 기업의 출산 장려금에 대한 비과세나 기부액만큼의 법인세 공제 등을 검토할 것으로 전망된다.</p>
+        <p>이번 대통령 지시에 따라 관련 부처에서는 기업의 출산 장려금에 대한 비과세<sup>①</sup>나 기부액만큼의 법인세 공제 등을 검토할 것으로 전망된다.</p>
 
         <p>이에 따라 파격적인 출산장려 복지가 다른 기업으로 확산할 수 있을지 관심이 모아지고 있다.</p>
 
-        <p>건설업계 관계자는 "당장은 업황이 좋지 않다보니 부영과 같은 복지를 제공하기는 현실적으로 어렵다"면서도 "다만 세제가 개편되고 한다면 기업 차원에서도 충분히 고려해 봄 직하다"고 했다.</p>
+        <p>건설업계 관계자는 <q> 당장은 업황이 좋지 않다보니 부영과 같은 복지를 제공하기는 현실적으로 어렵다 </q>면서도 <q> 다만 세제가 개편되고 한다면 기업 차원에서도 충분히 고려해 봄 직하다 </q>고 했다.</p>
 
       </section>
       <!-- [p요소] : 문단(Paragraph)
@@ -112,6 +112,13 @@
       <h5 class="article-link">
         <a href="https://n.news.naver.com/mnews/article/421/0007348654"target="_blank">기사원문</a>
       </h5>
+
+      <hr>
+
+      <h5>주해</h5>
+      <div>
+        ① 비과세는 이자소득세에 대한 세금을 과세하지않는 부분을 말한다.
+      </div>
 
 
 
