--- a/001. HTML학습/02. Info_PJ/sub2.html
+++ b/001. HTML학습/02. Info_PJ/sub2.html
@@ -85,15 +85,15 @@
 
         <p>자녀장려금은 소득기준이 4000만원→7000만원으로 대폭 확대되고 최대지급액도 80만 원 → 100만 원으로 늘어난다. 이를 통해 47만 가구가 더 혜택을 보게 된다. 또 지난해 집값이 떨어지면 공시가격도 평균 18.6% 하락했는데 이를 통해 32만 가구가 수혜대상에 추가로 포함된다.</p>
 
-        <p>국세청은 신청 가구가 늘어날 것에 대비해 장려금 자동 신청 동의 대상을 확대하고, 상담센터 인력을 늘리며 ‘보이는 ARS’와 ‘전화회신 서비스’를 최초로 도입한다.</p>
+        <p>국세청은 신청 가구가 늘어날 것에 대비해 장려금 자동 신청 동의 대상을 확대하고, 상담센터 인력을 늘리며 ‘<mark>보이는 ARS</mark>’와 ‘<mark>전화회신 서비스</mark>’를 최초로 도입한다.</p>
 
         <p>국세청은 고령자와 중증장애인이 매년 장려금을 신청해야 하는 불편을 해소하고, 신청 누락 및 전화금융사기 피해를 방지하기 위해 지난해부터 근로･자녀장려금 자동 신청 제도를 시행하고 있다. 지난해에는 65세 이상 고령자 94만 명과 중증장애인 13만 명 등 총 107만 명이 자동 신청에 동의했다.</p>
 
         <p>특히, 올해는 60세 이상 고령자로 대상을 확대해 모두 165만 명의 고령자가 혜택을 받을 것으로 기대된다. 자동신청에 동의하면 향후 2년내 신청대상에 포함되면 별도의 장려금 신청을 안해도 된다.</p>
 
-        <p>아울러 장려금 전용 상담센터 인력을 지난해 연인원 890명에서 930명으로 증원했다. 보이는 ARS 및 전화회신 서비스는 5월부터 시행한다.</p>
+        <p>아울러 장려금 전용 상담센터 인력을 지난해 연인원 890명에서 930명으로 증원했다. <ins>보이는 ARS 및 전화회신 서비스는 5월부터 시행</ins>한다.</p>
 
-        <p>아울러 지난해 장려금 수급자를 대상으로 공모한 ‘근로·자녀장려금 체험수기’ 수상작(40건)을 국세청 홈페이지를 통해 전자책(e-book)으로 발간했다. 국세청 홈페이지의 국세정책·제도→근로·자녀장려금→참고자료실 메뉴로 들어가면 된다.</p>
+        <p>아울러 지난해 장려금 수급자를 대상으로 공모한 ‘근로·자녀장려금 체험수기’ 수상작(40건)을 국세청 홈페이지를 통해 전자책(<sub>e-book</sub>)으로 발간했다. 국세청 홈페이지의 국세정책·제도→근로·자녀장려금→참고자료실 메뉴로 들어가면 된다.</p>
 
       </section>
       <!-- [p요소] : 문단(Paragraph)
