--- a/001. HTML학습/02. Info_PJ/sub2.html
+++ b/001. HTML학습/02. Info_PJ/sub2.html
@@ -83,9 +83,9 @@
 
         <p>국세청은 “올해 근로·자녀장려금 예상 지급 규모가 자녀장려금 제도 확대와 주택 공시가격 하락으로 대상자가 지난해보다 약 80만 가구가 늘며 6조 1000억 원이 지급될 것”이라고 14일 밝혔다. 작년에는 478만 가구에 5조 2000억원이 지급됐다.</p>
 
-        <p>자녀장려금은 소득기준이 4000만원→7000만원으로 대폭 확대되고 최대지급액도 80만 원 → 100만 원으로 늘어난다. 이를 통해 47만 가구가 더 혜택을 보게 된다. 또 지난해 집값이 떨어지면 공시가격도 평균 18.6% 하락했는데 이를 통해 32만 가구가 수혜대상에 추가로 포함된다.</p>
+        <p><mark>자녀장려금은 소득기준이 4000만원→7000만원으로 대폭 확대되고 최대지급액도 80만 원 → 100만 원으로 늘어난다.</mark> 이를 통해 47만 가구가 더 혜택을 보게 된다. 또 지난해 집값이 떨어지면 공시가격도 평균 18.6% 하락했는데 이를 통해 32만 가구가 수혜대상에 추가로 포함된다.</p>
 
-        <p>국세청은 신청 가구가 늘어날 것에 대비해 장려금 자동 신청 동의 대상을 확대하고, 상담센터 인력을 늘리며 ‘<mark>보이는 ARS</mark>’와 ‘<mark>전화회신 서비스</mark>’를 최초로 도입한다.</p>
+        <p>국세청은 신청 가구가 늘어날 것에 대비해 장려금 자동 신청 동의 대상을 확대하고, 상담센터 인력을 늘리며 ‘보이는 ARS’와 ‘전화회신 서비스’를 최초로 도입한다.</p>
 
         <p>국세청은 고령자와 중증장애인이 매년 장려금을 신청해야 하는 불편을 해소하고, 신청 누락 및 전화금융사기 피해를 방지하기 위해 지난해부터 근로･자녀장려금 자동 신청 제도를 시행하고 있다. 지난해에는 65세 이상 고령자 94만 명과 중증장애인 13만 명 등 총 107만 명이 자동 신청에 동의했다.</p>
 
