--- a/001. HTML학습/02. Info_PJ/sub5.html
+++ b/001. HTML학습/02. Info_PJ/sub5.html
@@ -85,7 +85,7 @@
 
         <p>이효리는 14일 오전 10시 30분 국민대학교 콘서트홀에서 열린 <b>‘2023학년도 학위수여식’</b>에서 축사를 했다.</p>
 
-        <p>이효리는 국민대 정승렬 총장에 이어 98학번 선배로서 축사를 낭독했다. 후배들에게 반갑게 인사를 건넨 이효리는 <q> 지금으로부터 26년 전, 연기자라기보다는 유명한 사람이 되어야지 하는 생각을 안고 국민대 연극영화과에 왔다. 그때만 해도 나는 특출나게 연기를 잘하지도, 예쁘지도 않은 평범한 학생이었다. 운 좋게 연예계에 데뷔해 지금까지 사랑받고 있다 </q>며 <q> 대학 졸업하는데 8년이나 걸린 제가 떠들 자격 있나 싶지만, 여러분보다 오래 산 걸 자랑삼아 떠들어보겠다 </q>고 운을 뗐다. </p>
+        <p>이효리는 국민대 정승렬 총장에 이어 98학번 선배로서 축사를 낭독했다. 후배들에게 반갑게 인사를 건넨 이효리는 "지금으로부터 26년 전, 연기자라기보다는 유명한 사람이 되어야지 하는 생각을 안고 국민대 연극영화과에 왔다. 그때만 해도 나는 특출나게 연기를 잘하지도, 예쁘지도 않은 평범한 학생이었다." "운 좋게 연예계에 데뷔해 지금까지 사랑받고 있다며  대학 졸업하는데 8년이나 걸린 제가 떠들 자격 있나 싶지만, 여러분보다 오래 산 걸 자랑삼아 떠들어보겠다"고 운을 뗐다. </p>
 
         <p>“사실 이렇게 많은 사람 앞에서 연설을 처음 해본다”고 밝힌 이효리는 “연설이 무엇일까 포털에 검색해봤다. 많은 사람들 앞에서 자신의 주의, 주장, 의견을 말하는 것이란다. 그런데 사실 내가 별로 좋아하지 않는 것이 누가 나에게 주장, 주의, 의견을 말하는 것”이라며 “특히 길게 말하는 건 싫어한다. 처음엔 듣는 척하고 들을 수 있지만 길어지면 안 만나고 싶다. 너는 너고 나는 나인데 왜 일장연설을 들어야하지 하는 생각을 갖고 있었다”고 말했다.</p>
 
