--- a/002.CSS학습/02.블록과인라인.html
+++ b/002.CSS학습/02.블록과인라인.html
@@ -48,7 +48,58 @@
                         -> box-sizing 속성
                         1) box-sizing: border-box; -> 크기를 지정한 박스에 대한 패딩과 보더를 포함시킴 (크기가 늘어나지 않음.)
                         2) box-sizing: content-box; -> 크기를 지정한 박스에 패딩과 보더를 주면 늘어남 (크기가 커짐)
+
+                        ------------------------------------------------------------------
+
+                2. inline 요소
+                 - 표현법 : display: inline;
+                 - 기본적으로 inline인 요소들
+                    a, img, span, b, i, em, strong, q.....
+                 - 특징:
+                    1) 인라인 요소는 블록요소를 포함할 수 없다.
+                        ex) <span> <div> </div> </span> -> 인라인을 블록으로 출신을 변경해서 원래 인라인이면 블록을 쌀 수 없다.
+                        예외) a요소 -> 원래는 블록요소를 싸면 안되지만 하도 많이 써서 허용으로 규칙이 변경됨.    
+                    2) width, height 크기가 적용안됨! -> 내용만큼 늘어남    
+                    3) margin은 양쪽만 적용됨 -> 위아래 마진은 적용안됨
+                    4) padding은 디자인 상 모두 적용되지만 실제로 다른 인라인 요소를 위아래 패딩으로 밀지 못한다.
+                        참고) 인라인 요소의 위 아래 간격은 line-height로 설정함.
+                    
+                    [예외 인라인 요소 : img]
+                    - 이미지는 인라인 요소지만, width,height,margin,padding,border 모두 적용되고
+                    실제로 다른 요소에 영향을 미침
+                    - 이미지는 기본적으로 자체비율을 가지고 있어서 한 쪽크기만 주면 나머지는 자동으로 설정됨
+
+                    [display를 숨기는 방법]
+                    display: none; -> 태그는 그대로 있고 화면출력만 안됨.
+
+                    ------------------------------------------------------------------------------
+
+                    [초기화나 변경 세팅이 필요없는 순수 태그]
+                     - 블록 대표주자 : div
+                     - 인라인 대표주자 : span
+
+
+                3. inline-block 요소
+                 - 표현법 : display: inline-block;
+                 - 기본적으로 inline-block인 요소들
+                    button, input....
+                 - 특징:
+                    1) 인라인처럼 한줄에 온다
+                    2) 블록처럼 박스모델 속성이 적용됨
+                        참고) button 요소인 경우 -> box-sizing: border-box가 기본 적용됨
+
+                [기타 display]
+                 - table : 테이블 요소
+                 - flex : 유동적인 레이아웃 요소
+                 - grid : 그리드 레이아웃 요소
+                 
+
         *************************************************************/
+
+        /* 보더박스로 변경하기 */
+        .bxb{
+            box-sizing: border-box;
+        }
     </style>
   </head>
   <body>
@@ -60,6 +111,7 @@
         <img src="./imgs/blogo.png" alt="로고" title="나는 img다">
         <span>나는 span이다</span>
         <b>나는 b다</b>
+        <button>나는 버튼이다</button>
         <i>나는 i다</i>
         <em>나는 em이다</em>
         <strong>나는 strong이다</strong>
@@ -68,7 +120,7 @@
     <h2 class="tit">블록 요소들</h2>
     <div class="ele">
         <h1>나는 h1이다</h1>
-        <h4>나는 h4다</h4>
+        <h4 class="bxb">나는 h4다</h4>
         <div>나는 div다</div>
         <p>나는 p다</p>
         <header>나는 header다</header>
