--- a/001. HTML학습/02. Info_PJ/sub4.html
+++ b/001. HTML학습/02. Info_PJ/sub4.html
@@ -110,7 +110,7 @@
 
         <!-- 유튜브 동영상 박스 -->
         <div class="mvbox">
-          <iframe src="https://www.youtube.com/embed/gS0GAWWmZZM" title="뇌까지 침투한 미세 플라스틱 &#39;독성물질&#39; 된다 / JTBC 아침&amp;"></iframe>
+          <iframe src="https://www.youtube.com/embed/gS0GAWWmZZM"></iframe>
 
           <!-- iframe요소 
             - inline frame
@@ -140,7 +140,7 @@
         </p>
 
         <p>
-          이 연구는 과학기술정보통신부와 교육부, 한국연구재단이 추진하는
+          이 연구는 <abbr title="과학기술정보통신부">과기정통부</abbr>와 교육부, 한국연구재단이 추진하는
           중견연구사업 및 이공분야학문후속세대양성사업으로 수행됐으며,
           환경과학분야 국제학술지 저널 오브 해저드스 머티리얼스<sub>
             (Journal of Hazardous Materials)
