인트로 사이트 건드리다가 말았음...

--- a/001. HTML학습/02. Info_PJ/sub4.html
+++ b/001. HTML학습/02. Info_PJ/sub4.html
@@ -189,8 +189,22 @@
       </article>
 
 
-
-
+      <!-- 오늘의 작품 & 느낌 -->
+      <article class="work">
+        <h4>오늘의 작품 &amp; 느낌</h4>
+        <figure>
+          <img src="./images/img_the_scream.jpg" alt="뭉크의 절규">
+          <figcaption>
+            뭉크의 &lt;<cite>절규</cite>&gt;
+          </figcaption>
+        </figure>
+      </article>
+      <!-- 
+        [HTML 특수문자처리 요소]
+        & - &amp;
+        < - &lt; (less than ~)
+        > - &gt; (greater than ~)
+       -->
 
 
 
