--- a/900.인트로사이트/index.html
+++ b/900.인트로사이트/index.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>유지영의 아카이브 사이트</title>
-    <link rel="stylesheet" href="./css/main.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./css/main.css" />
+  </head>
+  <body>
+    <!-- <div class="bg-box">
+        사진
+    </div> -->
+
     <section class="wrap">
-    <h1>유지영의 아카이브</h1>
-    <h2>
+      <h1>유지영의 아카이브</h1>
+      <h2>
         <a href="../001. HTML학습/02. Info_PJ/" target="_blank">Info PJ</a>
-    </h2>
-</section>
-</body>
+      </h2>
+    </section>
+
+
+  </body>
 </html>
