인트로 페이지 만드는중

--- a/900.인트로사이트/index.html
+++ b/900.인트로사이트/index.html
@@ -11,11 +11,30 @@
         사진
     </div> -->
 
-    <section class="wrap">
-      <h1>유지영의 아카이브</h1>
-      <h2>
-        <a href="../001. HTML학습/02. Info_PJ/" target="_blank">Info PJ</a>
-      </h2>
+    <!-- 첫페이지 -->
+    <section class="page" id="pg1">
+      <!-- 네비게이션 -->
+      <nav class="menu">
+        <h1>
+          <img src="./images/mylogo_14.png" alt="내 로고">
+        </h1>
+
+        <!-- 메뉴 모음 -->
+        <h2>
+         <a href="#pg1">HTML 학습</a>
+         <span> | </span>
+         <a href="#pg2">CSS디자인요소로 학습</a>
+        </h2>
+
+      </nav>
+      
+      <!-- 링크박스 -->
+      <section class="link-box">
+        <h2>HTML 학습</h2>
+        <p>
+          <a href="../001. HTML학습/02. Info_PJ/" target="_blank">Info PJ</a>
+        </p>
+      </section>
     </section>
 
 
