--- a/900.인트로사이트/index.html
+++ b/900.인트로사이트/index.html
@@ -11,7 +11,7 @@
         사진
     </div> -->
 
-    <!-- 첫페이지 -->
+    <!-- 첫번째 페이지 -->
     <section class="page" id="pg1">
       <!-- 네비게이션 -->
       <nav class="menu">
@@ -23,7 +23,7 @@
         <h2>
          <a href="#pg1">HTML 학습</a>
          <span> | </span>
-         <a href="#pg2">CSS디자인요소로 학습</a>
+         <a href="#pg2">CSS 학습</a>
         </h2>
 
       </nav>
@@ -34,6 +34,40 @@
         <p>
           <a href="../001. HTML학습/02. Info_PJ/" target="_blank">Info PJ</a>
         </p>
+      </section>
+    </section>
+
+
+
+    <!-- 두번째 페이지 -->
+    <section class="page" id="pg2">
+      <!-- 네비게이션 -->
+      <nav class="menu">
+        <h1>
+          <img src="./images/mylogo_14.png" alt="내 로고">
+        </h1>
+
+        <!-- 메뉴 모음 -->
+        <h2>
+         <a href="#pg1">HTML 학습</a>
+         <span> | </span>
+         <a href="#pg2">CSS 학습</a>
+        </h2>
+
+      </nav>
+      
+      <!-- 링크박스 -->
+      <section class="link-box">
+        <h2>CSS 학습</h2>
+        <p>
+          <a href="../002.CSS학습/01-1.배경연습.html" target="_blank">01-1.배경연습</a>
+        </p>
+          <p>
+            <a href="../002.CSS학습/01-2.배경크기설정.html" target="_blank">01-2.배경크기설정</a>
+          </p>
+          <p>
+            <a href="../002.CSS학습/02.블록과인라인.html" target="_blank">02.블록과인라인</a>
+          </p>
       </section>
     </section>
 
