--- a/001. HTML학습/02. Info_PJ/sub4.html
+++ b/001. HTML학습/02. Info_PJ/sub4.html
@@ -250,16 +250,62 @@
           ol은 strat 로 시작번호 지정옵션, reversed를 주면 역순으로 순서 지정 -->
         <ol>
           <li>
-            <a href="https://n.news.naver.com/mnews/ranking/article/031/0000813542?ntype=RANKING" target="_blank">한동훈 "개혁신당, 돈때문에 모였나…이혼하면 보조금 사기"</a>
+            <a href="https://n.news.naver.com/mnews/ranking/article/031/0000813542?ntype=RANKING" target="_blank">1. 한동훈 "개혁신당, 돈때문에 모였나…이혼하면 보조금 사기"</a>
           </li>
           <li>
-            <a href="https://n.news.naver.com/mnews/ranking/article/031/0000813564?ntype=RANKING" target="_blank">김경율, 카이스트 강제 퇴장 "우발적 아냐…사전 준비한 듯"</a>
+            <a href="https://n.news.naver.com/mnews/ranking/article/031/0000813564?ntype=RANKING" target="_blank">2. 김경율, 카이스트 강제 퇴장 "우발적 아냐…사전 준비한 듯"</a>
           </li>
           <li>
-            <a href="https://n.news.naver.com/mnews/ranking/article/031/0000813532?ntype=RANKING" target="_blank">bhc, '값싼 브라질산 닭' 쓰면서 가격도 인상</a>
+            <a href="https://n.news.naver.com/mnews/ranking/article/031/0000813532?ntype=RANKING" target="_blank">3. bhc, '값싼 브라질산 닭' 쓰면서 가격도 인상</a>
           </li>
         </ol>
        </article>
+
+       <!-- 
+        [ 용어정의리스트 : dl]
+        dl>dt,dd
+        ---------------------
+        dl - 용어리스트 (defines description list)
+        dt - 용어정의 (defines the term)
+        dd - 용어설명 (description each term)
+
+          주의 : dl은 반드시 자식요소로 dt,dd가 한 번 이상 사용되어야 함.
+              : dt와 dd는 형제관계임.(자식아님)
+        -->
+        <!-- 분야별 뉴스 -->
+        <article class="sec-news news-box">
+          <h3>분야별 뉴스</h3>
+          <dl>
+
+            <dt>경제</dt>
+            <dd>
+              <a href="https://n.news.naver.com/mnews/article/029/0002856067" target="_blank">삼성, `초기업 노조` 출범…교섭권 없는 `연대파업` 우려도</a>
+            </dd>
+            <dd>
+              <a href="https://n.news.naver.com/mnews/article/029/0002855841" target="_blank">TSMC·삼성·SK 만나는 오픈AI… `AI 반도체 동맹` 가시화</a>
+            </dd>
+
+            <dt>사회</dt>
+            <dd>
+              <a href="https://n.news.naver.com/mnews/article/014/0005144072" target="_blank">푸바오, 3월 3일 '마지막 팬 미팅'… 에버랜드, 추억 이벤트 다채</a>
+            </dd>
+            <dd>
+              <a href="https://n.news.naver.com/mnews/article/001/0014513328" target="_blank">'붙잡고 싶은 MZ공무원' 제주도, 원격 근무 도입</a>
+            </dd>
+
+            <dt>TV/연예</dt>
+            <dd>
+              <a href="https://entertain.naver.com/read?oid=112&aid=0003682104" target="_blank">아이유, 스테이씨 시은 '홀씨' 챌린지에 흐뭇 "너무 귀여워..토끼인가"</a>
+            </dd>
+            <dd>
+              <a href="https://entertain.naver.com/read?oid=076&aid=0004111431" target="_blank">"사필귀정, 난 떳떳해" 제베원 김지웅, 욕설 논란 심화에 직접 반박 [SC이슈]</a>
+            </dd>
+
+          </dl>
+
+        </article>
+
+
        
 
 
