테이블 관련

--- a/001. HTML학습/02. Info_PJ/sub4.html
+++ b/001. HTML학습/02. Info_PJ/sub4.html
@@ -324,22 +324,35 @@
          <article class="photo-news news-box">
           <h3>사진 뉴스</h3>
           <!-- 3행 3열 테이블 구성 -->
+          <!-- <table border="1"> -->
           <table>
 
             <tr>
               <td>1</td>
-              <td></td>
-              <td></td>
+              <td><a href="https://n.news.naver.com/mnews/article/008/0005000564"target="_blank">스트레이 키즈, 美 '2024 피플스 초이스 어워즈'서 올해의 그룹상 수상</a>
+              </td>
+              <td>
+                <img src="./images/photo.jpg" alt="포토뉴스이미지">
+              </td>
             </tr>
+
             <tr>
               <td>2</td>
-              <td></td>
-              <td></td>
+              <td>
+                <a href="https://n.news.naver.com/mnews/article/014/0005144189"target="_blank">벤츠, 신차 'CLE 쿠페' 韓 상륙…2도어 차량</a>
+              </td>
+              <td>
+                <img src="./images/photo_2.jpg" alt="포토뉴스이미지2">
+              </td>
             </tr>
+
             <tr>
               <td>3</td>
-              <td></td>
-              <td></td>
+              <td><a href="https://n.news.naver.com/mnews/article/215/0001149087" target="_blank">더 시에나 라운지 청담, '와인 블라인드 테이스팅 콘테스트' 진행</a>
+              </td>
+              <td>
+                <img src="./images/photo_3.jpg" alt="포토뉴스이미지3">
+              </td>
             </tr>
 
           </table>
