정치쪽 "기사를 추천해요!"
버튼 활성화 하고 싶음...js건들어볼것

--- a/001. HTML학습/02. Info_PJ/sub1.html
+++ b/001. HTML학습/02. Info_PJ/sub1.html
@@ -120,6 +120,56 @@
         ① 비과세는 이자소득세에 대한 세금을 과세하지않는 부분을 말한다.
       </div>
 
+       <!-- 주요뉴스 - ul -->
+       <article class="main-news news-box">
+        <h3>주요뉴스</h3>
+        <!-- <ul style="list-style-type: square;"> -->
+        <ul>
+          <li>
+            <a href="https://www.news1.kr/articles/?5318506" target="_blank">유동근 "♥전인화, 20년간 시어머니 목욕 시키며 모시고 살아"</a>
+          </li>
+          <li>
+            <a href="https://www.news1.kr/articles/?5319203" target="_blank">김지석 "자다 남성호르몬 솟구쳐 벌떡…'이것' 전립선에 좋다"</a>
+          </li>
+          <li>
+            <a href="https://www.news1.kr/articles/?5318830" target="_blank">이동건 "딸 로아, 커서 몹쓸 남자 만나도 그냥 둘 것" 깜짝</a>
+          </li>
+        </ul>
+       </article>
+
+       <article class="recom-box news-box">
+        <h4>이 기사를 추천합니다.</h4>
+        <table>
+
+          <tr>
+            <td>‼</td>
+            <td>😲</td>
+            <td>🥰</td>
+            <td>🤩</td>
+            <td>👍</td>
+          </tr>
+
+          <tr>
+            <td>쏠쏠정보</td>
+            <td>흥미진진</td>
+            <td>공감백배</td>
+            <td>분석탁월</td>
+            <td>후속강추</td>
+          </tr>
+
+          <!-- 버튼으로 만들고 싶음 -->
+          <tr>
+            <td>2</td>
+            <td>0</td>
+            <td>13</td>
+            <td>1</td>
+            <td>3</td>
+          </tr>
+
+        </table>
+  
+       </article>
+
 
 
 
