--- a/001. HTML학습/02. Info_PJ/sub1.html
+++ b/001. HTML학습/02. Info_PJ/sub1.html
@@ -167,6 +167,10 @@
           </tr>
 
         </table>
+
+        <div>
+          <a href="https://media.naver.com/press/421" target="_blank"><span>뉴스1</span> 언론사홈 바로가기</a>
+        </div>
   
        </article>
 
