정치뉴스 건드리는중

--- a/001. HTML학습/02. Info_PJ/sub1.html
+++ b/001. HTML학습/02. Info_PJ/sub1.html
@@ -166,13 +166,11 @@
             <td>3</td>
           </tr>
 
-        </table>
+        </table>  
 
-        <div>
-          <a href="https://media.naver.com/press/421" target="_blank"><span>뉴스1</span> 언론사홈 바로가기</a>
-        </div>
-  
+        <a href="https://media.naver.com/press/421" target="_blank"><span>뉴스1</span> 언론사홈 바로가기▶</a>
        </article>
+
 
 
 
