경제뉴스 건드림

--- a/001. HTML학습/02. Info_PJ/sub2.html
+++ b/001. HTML학습/02. Info_PJ/sub2.html
@@ -89,6 +89,10 @@
 
         <p>국세청은 고령자와 중증장애인이 매년 장려금을 신청해야 하는 불편을 해소하고, 신청 누락 및 전화금융사기 피해를 방지하기 위해 지난해부터 근로･자녀장려금 자동 신청 제도를 시행하고 있다. 지난해에는 65세 이상 고령자 94만 명과 중증장애인 13만 명 등 총 107만 명이 자동 신청에 동의했다.</p>
 
+        <div class="mvbox">
+          <iframe src="https://www.youtube.com/embed/MoS3aMufGeE"></iframe>
+        </div>
+
         <p>특히, 올해는 60세 이상 고령자로 대상을 확대해 모두 165만 명의 고령자가 혜택을 받을 것으로 기대된다. 자동신청에 동의하면 향후 2년내 신청대상에 포함되면 별도의 장려금 신청을 안해도 된다.</p>
 
         <p>아울러 장려금 전용 상담센터 인력을 지난해 연인원 890명에서 930명으로 증원했다. <ins>보이는 ARS 및 전화회신 서비스는 5월부터 시행</ins>한다.</p>
@@ -103,7 +107,17 @@
 
       <!-- 기자 정보 -->
       <div class="reporter">
-        김덕준 기자(casiopea@busan.com)
+        김덕준 기자(casiopea@busan.com) <br>
+        <span class="r1">구독자 2,865 | 응원수 2,135</span> <br>
+        <span class="r2">안녕하세요. 세종시에서 경제 관련 정부부처를 취재하고 있습니다.</span>
+        <ul>
+          <li>
+            <a href="https://n.news.naver.com/mnews/article/082/0001256200?type=journalists">자동차번호판 봉인 폐지한다…음주측정 불응자, 사고부담금 다 낸다</a>
+          </li>
+          <li>
+            <a href="https://n.news.naver.com/mnews/article/082/0001256383?type=journalists">청년주택드림청약통장 21일 출시…당첨시 2%대 저금리 대출 가능</a>
+          </li>
+        </ul>
       </div>
 
       <!-- 기사 원문 -->
