--- a/002.CSS학습/01.Position/03.absolute.html
+++ b/002.CSS학습/01.Position/03.absolute.html
@@ -57,6 +57,8 @@
         #r2{
             position: relative;
             background: url(./images/ab4.jpg) no-repeat center/cover;
+            top: 150px;
+            left: 150px;
         }
 
         #s1{
@@ -101,9 +103,51 @@
             background: url(./images/ab1.jpg) no-repeat center/cover;
         }
 
+        /* .a3는 위치이동값이 없으므로 젠틀하다 <<싸고있는 박스 안에 패딩과 글자 다음에 위치하여 가만히 있는다. */
+        .a4{
+            top: 0;
+            left: 0;
+            width: 25%;
+            height: 40%;
+            /* 앱솔루트 크기를 %로 주면 부모자격박스를 기준한다. */
+        }
+        .spabs{
+            /* span을 앱솔루트로 만들경우 */
+            position: absolute;
+            bottom: 0;
+            right: 0;
+            border: 4px dotted red;
+
+        }
+
+        /* <!-- 앱솔루트 : 판타롱스타킹 --> */
+        .a5{
+            position: absolute;
+            /* 박스크기를 안준 앱솔루트는 그 크기가 내용만큼 늘어난다 
+                width,height 모두!*/
+            top: 20%;
+            right: 10%;
+            outline: 2px solid red;
+            /* outline는 보더와 유사하지만 보더는 박스크기에 영향을 주는 필수 구성요소지만
+            아웃라인은 다른영향이 전혀없는 외관선만 표시하는 속성이다.
+            outline: 두께 종류 색상; */
+        }
+
+        /* 블록박스내에 단독이미지 하단 공백 4px은 무엇인가? */
+        .a5 img{
+            /* 
+            박스에 단일한 이미지를 넣은 경우 하단에 자연스런 간극이 존재한다.(4px)
+            이것을 없애려면 vertical-align <<인라인 요소간 세로정렬 속성의 값으로 
+            top/bottom/middle 중 하나로 셋팅하면 하단 간극이 사라진다.
+            (baseline값은 적용안됨)
+            */
+            vertical-align: top;
+        }
+
 
     </style>
 </head>
+
 <body>
     <div class="bx" id="r1">r1</div>
     <div class="bx" id="s1">s1</div>
@@ -112,7 +156,18 @@
     <div class="bx" id="s2">s2</div>
     <div class="bx" id="a2">a2</div>
 
+    <!-- 앱솔루트 : 판타롱스타킹 -->
+    <div class="a5" title="앱솔루트 판타롱스타킹~">
+        <img src="./images/ab2.jpg" alt="타노스">
+    </div>
 
+    <!-- 앱솔루트끼지는 서로 겹친다. -->
+    <div class="absimg">
+        <img src="./images/ab3.jpg" alt="토르">
+        <img src="./images/ab4.jpg" alt="닥스">
+    </div>
+    
+    <!-- 부모를 찾는 앱솔루트 -->
     <div class="bx2 s5">s5
         <div class="bx2 s6">s6
             <div class="bx2 s7">s7
