--- a/002.CSS학습/01.Position/02.relative.html
+++ b/002.CSS학습/01.Position/02.relative.html
@@ -41,7 +41,10 @@
                     -> static보다는 위
                     -> static이 아닌 경우, 나중에 그려진 요소가 위
                     -> z-index 속성으로 숫자가 크면 위.
-                9) 
+                9) 부모자격
+                    -> 자식요소가 앱솔루트일때 부모자격으로 relative를 주는 경우가 많다.   
+                        > 기존 디자인이 그대로 유지되니까!그래서 static한 특징이 있는 랠러티브를 부모자격으로 설정하는 경우가 많다.
+                          실제로 앱솔루트의 부모자격은 static이 아닌 포지션 (랠러티브 앱솔루트 픽시드 스틱키)이다.
 
                 ------------------------------------------------------
                 [z-index란]
