--- a/900.인트로사이트/index.html
+++ b/900.인트로사이트/index.html
@@ -7,27 +7,28 @@
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
-    <!-- <div class="bg-box">
-        사진
-    </div> -->
+    <!-- 고정메뉴박스 -->
+    <header class="top-area">
+      <h1>
+        <img src="./images/mylogo_14.png" alt="내 로고" />
+      </h1>
+
+      <!-- 네비게이션 -->
+      <nav class="menu">
+        <!-- 메뉴 모음 -->
+        <ul>
+          <li>
+            <a href="#pg1">HTML 학습</a>
+          </li>
+          <li>
+            <a href="#pg2">CSS 학습</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
 
     <!-- 첫번째 페이지 -->
     <section class="page" id="pg1">
-      <!-- 네비게이션 -->
-      <nav class="menu">
-        <h1>
-          <img src="./images/mylogo_14.png" alt="내 로고">
-        </h1>
-
-        <!-- 메뉴 모음 -->
-        <h2>
-         <a href="#pg1">HTML 학습</a>
-         <span> | </span>
-         <a href="#pg2">CSS 학습</a>
-        </h2>
-
-      </nav>
-      
       <!-- 링크박스 -->
       <section class="link-box">
         <h2>HTML 학습</h2>
@@ -37,40 +38,27 @@
       </section>
     </section>
 
-
-
     <!-- 두번째 페이지 -->
     <section class="page" id="pg2">
-      <!-- 네비게이션 -->
-      <nav class="menu">
-        <h1>
-          <img src="./images/mylogo_14.png" alt="내 로고">
-        </h1>
-
-        <!-- 메뉴 모음 -->
-        <h2>
-         <a href="#pg1">HTML 학습</a>
-         <span> | </span>
-         <a href="#pg2">CSS 학습</a>
-        </h2>
-
-      </nav>
-      
       <!-- 링크박스 -->
       <section class="link-box">
         <h2>CSS 학습</h2>
         <p>
-          <a href="../002.CSS학습/01-1.배경연습.html" target="_blank">01-1.배경연습</a>
+          <a href="../002.CSS학습/01-1.배경연습.html" target="_blank"
+            >01-1.배경연습</a
+          >
         </p>
-          <p>
-            <a href="../002.CSS학습/01-2.배경크기설정.html" target="_blank">01-2.배경크기설정</a>
-          </p>
-          <p>
-            <a href="../002.CSS학습/02.블록과인라인.html" target="_blank">02.블록과인라인</a>
-          </p>
+        <p>
+          <a href="../002.CSS학습/01-2.배경크기설정.html" target="_blank"
+            >01-2.배경크기설정</a
+          >
+        </p>
+        <p>
+          <a href="../002.CSS학습/02.블록과인라인.html" target="_blank"
+            >02.블록과인라인</a
+          >
+        </p>
       </section>
     </section>
-
-
   </body>
 </html>
