인트로 건드리기
포지션 넣음

--- a/900.인트로사이트/index.html
+++ b/900.인트로사이트/index.html
@@ -9,7 +9,7 @@
   <body>
     <!-- 고정메뉴박스 -->
     <header class="top-area">
-      <h1>
+      <h1 class="logo">
         <img src="./images/mylogo_14.png" alt="내 로고" />
       </h1>
 
