--- a/002.CSS학습/01.Position/06.sticky연습.html
+++ b/002.CSS학습/01.Position/06.sticky연습.html
@@ -11,19 +11,20 @@
         }
         /* sticky구간을 body로 잡음 */
         body{
-            height: 4000px;
+            height: 3000px;
         }
         .bx{
             position: sticky;
             top: 0;
             text-align: center;
             margin-top: 300px;
-
+            
         }
         /* 박스 이미지 엔터 간극없애기 */
-    .bx img{
-        vertical-align: top;
-    }
+        .bx img{
+            vertical-align: top;
+        }
+    /* 스크롤이 없으면 되다 말더라구.. 화면 비율 75%로하다가..높이값바꿔서 했네 */
     /* 스티키 top값 개별지정 */
     .bx:nth-child(2){
         top: 105px;
