--- a/002.CSS학습/01.Position/06.sticky연습.html
+++ b/002.CSS학습/01.Position/06.sticky연습.html
@@ -16,7 +16,7 @@
         .bx{
             position: sticky;
             top: 0;
-            text-align: center;
+            text-align: right;
             margin-top: 300px;
             
         }
