로봇몸통 팔다리
포지션 활용

--- a/001. HTML학습/03.Robot_PJ/Robot.html
+++ b/001. HTML학습/03.Robot_PJ/Robot.html
@@ -39,9 +39,9 @@
                     </div>
 
                     <!-- 2-1-2. 로봇몸 -->
-                    <div class="body">
+                    <div class="body metal2">
                         <!-- 목 -->
-                        <div class="neck"></div>
+                        <div class="neck metal2"></div>
                         <!-- 왼팔 -->
                         <div class="arm arm1 metal2">
                             <span class="metal2"></span>
