동영상 넣고 포스터 하단 옮김

--- a/001. HTML학습/06.CGV_PJ/003.구현소스/index.html
+++ b/001. HTML학습/06.CGV_PJ/003.구현소스/index.html
@@ -20,6 +20,29 @@
             <iframe id="ifr" src="https://www.youtube.com/embed/8fs5YClZVfg?autoplay=1&mute=1&loop=1&playlist=8fs5YClZVfg" allow="autoplay">  
             </iframe>
         </div>
+        <!-- 포스터 메뉴 -->
+        <nav class="poster-menu">
+            <ul>
+                <li>
+                    <img src="./images/m1.jpg" alt="스파이더맨-어크로스더유니버스"></img>
+                </li>
+                <li>
+                    <img src="./images/m2.jpg" alt="서울의 봄">
+                </li>
+                <li>
+                    <img src="./images/m3.jpg" alt="짱구는 못말려 초능력 대결전">
+                </li>
+                <li>
+                    <img src="./images/m4.jpg" alt="웡카">
+                </li>
+                <li>
+                    <img src="./images/m5.jpg" alt="스미코구라시">
+                </li>
+                <li>
+                    <img src="./images/m6.jpg" alt="추락의 해부">
+                </li>
+            </ul>
+        </nav>
     </main>
     <!-- 3.하단영역 -->
     <footer class="footer-area part">
