--- a/001. HTML학습/06.CGV_PJ/003.구현소스/index.html
+++ b/001. HTML학습/06.CGV_PJ/003.구현소스/index.html
@@ -1,52 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CGV에 오신 것을 환영합니다!</title>
-    <link rel="stylesheet" href="./css/main.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./css/main.css" />
+    <!-- 자바스크립트 코드 구역 -->
+    <script>
+      //JS코드구역
+      // alert('나는 누구? 여긴 어디');
+      //JS코드는 만나자마자 바로 실행됨 그래서 함수라는 코드저장소를 만들고 호출시에만 실행되도록한다.
+      /* 
+        JS함수 ->function 함수명(){ 코드 }
+        */
+      function 멍멍이() {
+        alert('ㅎㅎ');
+        document.getElementById("ifr").src =
+          "https://www.youtube.com/embed/dW8klYbV5t0?autoplay=1&mute=1&loop=1&playlist=dW8klYbV5t0";
+      }
+    </script>
+  </head>
+  <body>
     <!-- 1.상단영역 -->
     <header class="top-area part">
-        <!-- 1-1. 타이틀 -->
-        <h1 class="tit">CGV 예고편 상영관</h1>
+      <!-- 1-1. 타이틀 -->
+      <h1 class="tit">CGV 예고편 상영관</h1>
     </header>
     <!-- 2.메인영역 -->
     <main class="main-area part">
-        <!-- 2-1.스크린 -->
-        <div class="screen">
-            <!-- 유튜브 iframe -->
-            <iframe id="ifr" src="https://www.youtube.com/embed/8fs5YClZVfg?autoplay=1&mute=1&loop=1&playlist=8fs5YClZVfg" allow="autoplay">  
-            </iframe>
-        </div>
-        <!-- 포스터 메뉴 -->
-        <nav class="poster-menu">
-            <ul>
-                <li>
-                    <img src="./images/m1.jpg" alt="스파이더맨-어크로스더유니버스"></img>
-                </li>
-                <li>
-                    <img src="./images/m2.jpg" alt="서울의 봄">
-                </li>
-                <li>
-                    <img src="./images/m3.jpg" alt="짱구는 못말려 초능력 대결전">
-                </li>
-                <li>
-                    <img src="./images/m4.jpg" alt="웡카">
-                </li>
-                <li>
-                    <img src="./images/m5.jpg" alt="스미코구라시">
-                </li>
-                <li>
-                    <img src="./images/m6.jpg" alt="추락의 해부">
-                </li>
-            </ul>
-        </nav>
+      <!-- 2-1.스크린 -->
+      <div class="screen">
+        <!-- 유튜브 iframe -->
+        <iframe
+          id="ifr"
+          src="https://www.youtube.com/embed/8fs5YClZVfg?autoplay=1&mute=1&loop=1&playlist=8fs5YClZVfg"
+          allow="autoplay"
+        >
+        </iframe>
+      </div>
+      <!-- 포스터 메뉴 -->
+      <nav class="poster-menu">
+        <ul>
+          <li>
+            <a href="#" onclick="멍멍이()">
+              <img src="./images/m1.jpg" alt="스파이더맨-어크로스더유니버스"
+            /></a>
+          </li>
+          <li>
+            <a href="#"> <img src="./images/m2.jpg" alt="서울의 봄" /></a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="./images/m3.jpg" alt="짱구는 못말려 초능력 대결전"
+            /></a>
+          </li>
+          <li>
+            <a href="#"> <img src="./images/m4.jpg" alt="웡카" /></a>
+          </li>
+          <li>
+            <a href="#"> <img src="./images/m5.jpg" alt="스미코구라시" /></a>
+          </li>
+          <li>
+            <a href="#"> <img src="./images/m6.jpg" alt="추락의 해부" /></a>
+          </li>
+        </ul>
+      </nav>
     </main>
     <!-- 3.하단영역 -->
-    <footer class="footer-area part">
-
-    </footer>
-</body>
+    <footer class="footer-area part"></footer>
+  </body>
 </html>
