--- a/002.CSS학습/08.트렌지션.html
+++ b/002.CSS학습/08.트렌지션.html
@@ -17,6 +17,12 @@
                 transition: 속성명 시간 이징 지연시간
                 -> 속시이지!
 
+                - 트렌지션 개별속성명
+                transition-duration (속성명)
+                transition-property (시간)
+                transition-timing-function (이징)
+                transition-delay (지연시간)
+
                 - 설정값 :
                  1) 속성명 - 애니메이션 지정 대상속성
                  예컨데 height 값을 쓰면
@@ -62,6 +68,7 @@
             ***************************************************/
         body{
             padding-bottom: 400px;
+
         }
         h1 {
             text-align: center;
@@ -88,7 +95,101 @@
             background-color: #ff0;
             border-radius: 50%;
         }
-        
+
+        /* #tr1에 트랜지션 적용 */
+        /* 트랜지션을 hover가 아닌 원래 요소에 주면 양뱡향(오버시 포함) 모두 적용된다. */
+        #tr1 span{
+            /* all 생략가능 */
+            transition: all 2s;
+        }
+        /* 오버시 변경사항 */
+        #tr1:hover span{
+            /* 위치이동 */
+            left: 50%;
+            background-color: darkorchid;
+            border-radius: 0;
+        }
+
+        /* tr2에 트랜지션 설정하지 않음 */
+        #tr2 span{
+            width: 100px;
+            height: 100px;
+        }
+        /* 마우스 오버시에만 트랜지션을 주면 오버스에만 적용 */
+        #tr2:hover span{
+            left: 70%;
+            width: 300px;
+            height: 300px;
+            background-color: aquamarine;
+
+            transition: 3s;
+        }
+
+        /* tr3에 트랜지션 */
+        #tr3 span{
+            left: -2%;
+            width: 50px;
+            height: 50px;
+            background-color: palevioletred;
+            /* 트랜지션 원본(양방향/돌아올때) */
+            transition:
+            all 2s 1s,
+            /* 전체는 1초후 2초간 애니 */
+            top 1s;
+            /* top만 바로 1초간 애니 */
+        }
+        #tr3:hover span{
+            top: -200px;
+            left: 70%;
+            width: 400px;
+            height: 400px;
+            background-color: lightgreen;
+            /* 트랜지션 오버시 */
+            transition: 4s,
+            /* 전체는 4초간 애니 */
+            top 1s 5s;
+            /* top만 5초후 1초간 애니 */
+        }
+
+        /* tr4에 트랜지션 설정하기 */
+        /* 
+        여러가지 속성을 별도로 트랜지션 주고자 할때
+        속시이지 순으로 세팅하고 콤마로 구분한다.
+        */
+        #tr4 span{
+            left: 10%;
+            width: 10px;
+            height: 10px;
+            background-color: royalblue;
+
+            /* 돌아올때 트랜지션 */
+            /* 올때 트랜지션 */
+            transition: left 3s ease-in-out 7s,
+            /* left는 3초간 처음과 끝에 천천히 1초 기다림 */
+            width 2s ease-out 7s,
+            /* width는 2초간 끝에서 천천히 7초 기다림 */
+            height 1s ease-in 4s,
+            /* height는 1초간 처음에 천천히 4초 기다림 */
+            background-color 3s linear 7s;
+            /* 배경색은 3초간 등속도로 7초 기다림 */
+        }
+        /* 체크박스가 체크되면 그 다음 형제요소를 변경하여 클릭 시 변경된 것 같은 효과로 작동시킨다. */
+        #chkbx:checked + span{
+            left: 70%;
+            width: 500px;
+            height: 300px;
+            background-color: hotpink;
+
+            /* 갈때 트랜지션 */
+            transition: left 3s ease-in-out 1s,
+            /* left는 3초간 처음과 끝에 천천히 1초 기다림 */
+            width 2s ease-out 4s,
+            /* width는 2초간 끝에서 천천히 4초 기다림 */
+            height 1s ease-in 6s,
+            /* height는 1초간 처음에 천천히 6초 기다림 */
+            background-color 3s linear 7s;
+            /* 배경색은 3초간 등속도로 7초 기다림 */
+        }
 
 
         
