--- a/003.JS학습/JS1.기본사용법.html
+++ b/003.JS학습/JS1.기본사용법.html
@@ -195,6 +195,7 @@
           피박스.style.lineHeight='100px';
 
           //3-7. 트랜지션
+          //따옴표 대신 ``<<요거 사용해서 엔터로 사용가능!
           피박스.style.transition=
           `2s, 
           top 4s 2s, 
@@ -209,7 +210,7 @@
           피박스.style.left='50%';
 
           //3-10. 중앙 트랜스폼 변경 - 중앙이동 / 360도 회전, 크기변경
-          피박스.style.transform='translate(-50%,-50%) rotate(360deg)'
+          피박스.style.transform='translate(-50%,-50%) rotate(360deg) scale(1.3)';
 
           /******************************************************************
            
