JS 1차! 김비서는 왜그럴까

--- a/003.JS학습/JS1.기본사용법.html
+++ b/003.JS학습/JS1.기본사용법.html
@@ -212,6 +212,11 @@
           //3-10. 중앙 트랜스폼 변경 - 중앙이동 / 360도 회전, 크기변경
           피박스.style.transform='translate(-50%,-50%) rotate(360deg) scale(1.3)';
 
+          //3-11. 전체 배경색 바꾸기
+          //JS에서 Body는 특별히 취급하여 document.body로 해야함
+          var 바디=document.body;
+          바디.style.backgroundColor='lightgreen';
+          바디.style.transition='5s 3s'
           /******************************************************************
            
           [ JS의 요소 선택 메서드]
