--- a/002.CSS학습/04-1.가상클래스.html
+++ b/002.CSS학습/04-1.가상클래스.html
@@ -316,6 +316,48 @@
       .part2 i:nth-of-type(1)~div{
         font-size: 30px;
       }
+
+      /* 
+      [ CSS 속성 선택자 : Attributes Selector]
+      - 표기법 : 대괄호 안에 속성명과 값으로 표기
+      - 값으로 특수문자 또는 띄어쓰기가 없다면 따옴표 생략이 가능하다.
+      (대괄호 앞에 요소명/클래스명/아이디명 등 쓰기는 선택사항)
+      예) [href="#"],div#mymy[title='어쩌구']
+
+      1. 속성의 정확한 값은 이퀄(=)로 표기함
+      예) [href="#"]
+      2. 속성의 값 중 시작하는 값은 ^= (값에 따옴표없어도 됨)
+      예) a[href^='http']
+      3. 속성의 값 중 끝나는 값은 $= (값에 따옴표없어도 됨)
+      예) a[href$='.com']
+      4. 속성의 값 중 문자열이 있기만하면 선택값은 *= (값에 따옴표없어도 됨)
+      예) a[href*='yy']
+      5. 속성명만 쓰면 속성이 있는 것 모두 선택함
+      예) [alt] -> alt속성이 있는 것 선택
+
+      참고) https://www.w3schools.com/css/css_attribute_selectors.asp
+      */
+
+      /* =은 정확히 일치 */
+      [title='역겨워!']::after{
+        content: '😠';
+      }
+      /* ^= 시작하는 문자 */
+      [title^='즈려']::after{
+        content: '🥾';
+      }
+      /* $= 끝나는 문자 */
+      [title$=ㅋㅋ]::after{
+        content: '😊';
+      }
+      /* *= 모든문자 */
+      [title*=변]::after{
+          content: '💦';
+      }
+      /* 타이틀속성이 있는 모든 요소 */
+      [title]{
+        outline: 4px dotted lightgrey;
+      }
       </style>
   </head>
   <body>
@@ -356,5 +398,22 @@
       <div>가실 때에는</div>
       <span>죽어도 아니 눈물 흘리우리다</span>
     </div>
+
+    <div class="part2">
+        <div>나 보기가 역겨워</div>
+      <em>가실 때에는</em>
+      <div title="말없냐?ㅋㅋ">
+        말없이 고이 보내 드리우리다</div>
+      <em title="영변은 어디?ㅋ">
+        영변에 약산</em>
+      <div>진달래꽃</div>
+      <i>아름 따다 가실 길에 뿌리우리다</i>
+      <div>가시는 걸음 걸음</div>
+      <i>놓인 그 꽃을</i>
+      <div title="즈려밟고 함가봐!">
+        사뿐히 즈려밟고 가시옵소서</div>
+      <i title="역겨워!">나 보기가 역겨워</i>
+      <div>가실 때에는</div>
+      <span>죽어도 아니 눈물 흘리우리다</span></div>
   </body>
 </html>
