--- a/002.CSS학습/15.뷰포트단위.html
+++ b/002.CSS학습/15.뷰포트단위.html
@@ -201,6 +201,7 @@
             -> 모바일화면개념이다!
             -> 사용: 모바일화면/스크롤바가 없는 DT */
             background-color: lightcoral;
+            font-size: 40px;
         }
         /* 100% */
         .vp7{
@@ -209,6 +210,7 @@
             -> 스크롤바 트랙을 뺀 화면전체가 100%임!
             -> 사용: 스크롤바가 있는 DT */
             background-color: lightgreen;
+            font-size: 40px;
         }
         
 
