--- a/003.JS학습/JS2-1.변수와연산자.html
+++ b/003.JS학습/JS2-1.변수와연산자.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JS2-1. 변수(Variable)와 연산자(Operator)</title>
     <script>
-    /********************************************** 
+      /********************************************** 
         [ JS의 변수란? ]
 
         _______________________________________
@@ -92,8 +92,8 @@
         - 따옴표없는 숫자데이터
 
     (3) 불린형 : true / false
-        - 따옴표없이 위와 같이 쓰면 조건식결과로
-        true/false를 사용함!
+        - 따옴표없이 위와 같이 쓰면 조건식결과로 true/false를 사용함!
+        - true는 숫자 1 / false는 숫자 0과 대응됨
 
     (4) 기타형 :
         - 날짜형
@@ -122,8 +122,8 @@
     선언시에 정해준다! 그런데 JS는 데이터형을
     정하지 않고 할당시에 데이터형이 자동으로 정해진다!
 
-    -> JS 에서도 데이터형을 정해는 방법으롤 TypeScript가
-    사용되고 있음! - MS에서 개발하고 배포함!
+    -> JS 에서도 데이터형을 정해는 방법으롤 TypeScript가 사용되고 있음! 
+        - MS에서 개발하고 배포함!
 
     _______________________________________
 
@@ -172,9 +172,94 @@
 
 
     **********************************************/
+
+      // 변수의 선언과 할당
+      var A = "삐"; //문자형
+      var B = true; //불린형
+      var C = 7; //숫자형
+      var D = "끼"; //문자형
+      var E = "ZZI"; //문자형
+      var 와라와라 = "흠칫뿡"; //문자형
+      var F;
+
+      // 변수의 출력
+      //document.write(메시지)
+      //변수와 문자를 합칠때 +연산자 사용
+      document.write(
+        A +
+          "소리와 함께 도착한 택배, 이거슨 " +
+          B +
+          ". 내 받아본 " +
+          C +
+          "번째 득템! 나의 " +
+          D +
+          "를 발산시켜주는 나의 보물" +
+          E +
+          ", 이거 없으면 " +
+          와라와라 +
+          "!"
+      );
+
+      //변수값 변경하기(덮어씀)
+      A = "꽈지직";
+      B = "오디오";
+      C = "100";
+      D = "열정과 끼";
+      E = "페이퍼백";
+      와라와라 = "허무해";
+
+      //ES6버전으로 출력하기(백틱으로 싼다.)
+      document.write(`<br><br>
+        ${A}소리와 함께 도착한 택배, 이거슨 ${B}  내 받아본 ${C}번째 득템! 나의 ${D}를 발산시켜주는 나의 보물, ${E}, 이거 없으면 ${와라와라}!
+        `);
+
+      /*************************************************** 
+         * [ 변수의 사용과 템플릿리터럴 출력법 사용 미션 ]
+         * 
+            아래 시를 사용하여 대괄호 부분을 변수처리하여 
+            템플릿리터럴로 출력하시오~!
+
+            - 조건:
+            1. 줄바꿈은 <br> 제목은 <h1>사용할 것!
+            2. 변수명은 자율. var로 선언할것. 
+                (데이터개수 5개.변수5개에 담기)
+            3. 출력은 document.write() 쓸것!
+
+            ******************************
+            청산별곡
+
+            살어리 살어리랏다 [쳥산(靑山)]애 살어리랏다
+            [멀위]랑 [ᄃᆞ래]랑 먹고 [쳥산(靑山)]애 살어리랏다
+            [얄리얄리 얄랑셩 얄라리 얄라]
+
+            우러라 우러라 [새]여 자고 니러 우러라 [새]여
+            널라와 시름 한 나도 자고 니러 우니로라
+            [얄리얄리 얄랑셩 얄라리 얄라]
+        ***************************************************/
+
+      A = "쳥산(靑山)";
+      B = "멀위";
+      C = "ᄃᆞ래";
+      E = "얄리얄리 얄랑셩 얄라리 얄라";
+      F = "새";
+
+      document.write(`<br><br>
+            <h1>청산별곡</h1>
+            
+            살어리 살어리랏다 ${A}애 살어리랏다<br>
+            ${B}랑 ${C}랑 먹고 ${A}애 살어리랏다<br>
+            ${E}<br><br>
+
+            우러라 우러라 ${F}여 자고 니러 우러라 ${F}여<br>
+            널라와 시름 한 나도 자고 니러 우니로라<br>
+            ${E}
+        `);
     </script>
-</head>
-<body>
-    
-</body>
+    <style>
+      body {
+        font-size: 40px;
+      }
+    </style>
+  </head>
+  <body></body>
 </html>
