--- a/003.JS학습/JS2-1.변수와연산자.html
+++ b/003.JS학습/JS2-1.변수와연산자.html
@@ -620,7 +620,20 @@
       today='맑음';
       showResult3();
 
+// ****************************************
+// 삼항연산자는 출력자리에 바로 사용할 수 있다.
+var answerNow = function(answer){
+    //함수호출시 값을 전달하면 함수전달변수에 담긴다.
+    document.write(`
+    <h2>조건연산자 자리 출력</h2>
+    아빠, 아이스크림 사줘!<br>
+    아빠왈 ${answer=='좋아'?'사줄게':'안돼'}<br><br>
+    `);
+}; // answerNow 함수!
 
+    // 조건연산자 자리출력
+    answerNow('좋아');
+    answerNow('싫어');
 
       document.write(``);
     </script>
