--- a/002.CSS학습/06.CSS실험실/02.햄버거버튼.html
+++ b/002.CSS학습/06.CSS실험실/02.햄버거버튼.html
@@ -12,6 +12,9 @@
             height: 250px;
             margin: 50px auto;
             outline: 5px dotted lightpink;
+
+            /* 손가락 보이기 */
+            cursor: pointer;
         }
 
         /* 햄버거 바 공통 */
@@ -21,28 +24,70 @@
             height: 50px;
             background-color: #333;
             border-radius: 25px;
-
-            /* 트랜지션 */
-            transition: .6s;
         }
         
         /* 1번 바 */
         .hambtn span:nth-child(1){
             top: 0;
+
+            transition: top .3s .3s,
+            transform .3s;
+            /* top값은 .3초대기 후 .3초 애니, transform은 바로 .3초 애니
+            ->회전 후 중앙 이동 */
         }
         /* 2번 바 */
         .hambtn span:nth-child(2){
             top: 100px;
+            left: 0;
+            /* left 초기값 있어서 애니메이션 됨(기본값 auto) */
+
+            transition: .1s .3s;
         }
         /* 3번 바 */
         .hambtn span:nth-child(3){
             top: 200px;
+
+            transition: top .3s .3s,
+            transform .3s;
+            /* top값은 .3초대기 후 .3초 애니, transform은 바로 .3초 애니
+            ->회전 후 중앙 이동 */
+
         }
+        
+        /* 상위  메뉴에 클래스 on을 줄 경우 닫기버튼으로 변경하기 */
+        /* 1번 바 */
+        .hambtn.on span:nth-child(1){
+            top: 100px;
+            transform: rotate(45deg);
+
+            /* 트랜지션 개별설정 */
+            transition: top .3s,
+            transform .3s .3s;
+            /* top값은 바로 .3초, transform은 .3초 대기 후 .3초 애니
+            ->중앙 이동후 회전함 */
+        }
+        /* 2번 바 */
+        .hambtn.on span:nth-child(2){
+            top: 100px;
+            width: 0%;
+            left: 50%;
+            /* .3초 후 .1초 애니 */
+            transition: .1s .3s;
+        }
+        /* 3번 바 */
+        .hambtn.on span:nth-child(3){
+            top: 100px;
+            transform: rotate(-45deg);
+            transition: top .3s,
+            transform .3s .3s;
+        }
+
+
     </style>
 </head>
 
 <body>
-    <div class="hambtn">
+    <div class="hambtn on">
         <span></span>
         <span></span>
         <span></span>
